# FlexiCAN

./: .gitignore  .gitmodules  LICENSE  ReadMe.md  editorconfig.txt  uncrustify.cfg
1.firmware/rp2040/external_libs/CherrySH/CherryRL/: chry_readline.c
1.firmware/rp2040/external_libs/CherryUSB/demo/: cdc_acm_template.c
1.firmware/rp2040/include/: ch446q.h  csh_config.h  menu.h
1.firmware/rp2040/src/: main.c  menu.c  utils.c
1.firmware/stm32/: CMakeLists.txt
1.firmware/stm32/libs/STM32_HAL/config/: stm32g4xx_hal_conf.h
1.firmware/stm32/libs/STM32_HAL/include/stm32g4xx/: stm32g4xx_ll_rcc.h
1.firmware/stm32/libs/STM32_USB_Device_Library/: CMakeLists.txt
1.firmware/stm32/src/can/: m_can.c
2.hardware/: BOMLIST_JLC_FlexiCan.xlsx  FlexiCan.SchDoc  PCB_FlexiCan.OutJob  PCB_FlexiCan.PrjPcb  Pick Place for FlexiCan.csv
3.model/: FlexiCan_3D_bottom.stl  FlexiCan_3D_button.stl
FW/rp2040/: .gitignore  CMakeLists.txt  memmap_custom.ld
FW/rp2040/include/: font.h  logo.h  pindef.h  shell.h  ssd1306.h  storage.h  utils.h
FW/rp2040/src/: ch446q.c  menu.c  shell.c  storage.c
FW/stm32/include/: config.h
FW/stm32/libs/STM32_HAL/: CMakeLists.txt
FW/stm32/libs/STM32_HAL/config/: hal_include.h
FW/stm32/src/: main.c
FW/stm32/src/boards/: g431-Obit_FDCAN.c
FW/stm32/src/device/: device_g4.c
HW design/: PCB_FlexiCan.OutJob  PCB_FlexiCan.PrjPcb  Pick Place for FlexiCan.csv
Model/: FlexiCan_3D_top.stl
